--- a/viewer/src/app/pages/display-data/display-data.component.html
+++ b/viewer/src/app/pages/display-data/display-data.component.html
@@ -1,12 +1,13 @@
-<h2 class="content-block">Display Data</h2>
+<h2 class="content-block">Commits Data</h2>
 
 <dx-pivot-grid
   [allowSortingBySummary]="true"
   [allowSorting]="true"
   [allowFiltering]="true"
   [allowExpandAll]="true"
-  [height]="440"
+  rowHeaderLayout="tree"
   [showBorders]="true"
-  [dataSource]="dataSource">
+  [dataSource]="dataSource"
+  (onCellPrepared)="cellPrepared($event)">
   <dxo-field-chooser [enabled]="false"></dxo-field-chooser>
 </dx-pivot-grid>
