--- a/viewer/src/app/pages/display-data/display-data.component.html
+++ b/viewer/src/app/pages/display-data/display-data.component.html
@@ -1,8 +1,25 @@
-<h2 class="content-block">Commits Data</h2>
+<div class="dx-fieldset">
+    <div class="dx-field custom-height-slider">
+        <div class="dx-field-label">Commits count</div>
+        <div class="dx-field-value">
+            <dx-slider [min]="0" [max]="150" [(value)]="sliderValue" (onValueChanged)="updateFilter()">
+                <dxo-tooltip [enabled]="false"></dxo-tooltip>
+            </dx-slider>
+        </div>
+    </div>
+    <div class="dx-field">
+        <div class="dx-field-label">Select a Period</div>
+        <div class="dx-field-value">
+            <dx-range-selector [value]="[minDate, maxDate]" (onValueChanged)="onDateChanged($event)">
+                <dxo-margin [top]="0"></dxo-margin>
+                <dxo-scale [startValue]="startDate" [endValue]="endDate" minorTickInterval="day" tickInterval="week">
+                </dxo-scale>
+                <dxo-slider-marker format="monthAndDay"></dxo-slider-marker>
+            </dx-range-selector>
+        </div>
+    </div>
+</div>
 
-<dx-slider [min]="0" [max]="150" [value]="sliderValue" (onValueChanged)="slideChanged($event)">
-    <dxo-tooltip [enabled]="true"></dxo-tooltip>
-</dx-slider>
 
 <dx-chart id="sales-chart">
     <dxo-common-series-settings type="bar"></dxo-common-series-settings>
