--- a/viewer/src/app/layouts/side-nav-inner-toolbar/side-nav-inner-toolbar.component.html
+++ b/viewer/src/app/layouts/side-nav-inner-toolbar/side-nav-inner-toolbar.component.html
@@ -23,7 +23,7 @@
                     cssClass="menu-button"
                     widget="dxButton"
                     [options]="{
-                        icon: 'menu',
+                        icon: 'fab fa-cloudscale',
                         stylingMode: 'text',
                         onClick: toggleMenu
                     }">
