--- a/viewer/src/app/pages/display-data/display-data.component.html
+++ b/viewer/src/app/pages/display-data/display-data.component.html
@@ -1,6 +1,8 @@
+<h2 class="content-block">Absolute values</h2>
+
 <div class="dx-fieldset">
     <div class="dx-field custom-height-slider">
-        <div class="dx-field-label">Commits count</div>
+        <div class="dx-field-label">Commits threshold</div>
         <div class="dx-field-value">
             <dx-slider [min]="0" [max]="150" [(value)]="sliderValue" (onValueChanged)="updateFilter()">
                 <dxo-tooltip [enabled]="false"></dxo-tooltip>
@@ -8,7 +10,7 @@
         </div>
     </div>
     <div class="dx-field">
-        <div class="dx-field-label">Select a Period</div>
+        <div class="dx-field-label">Period</div>
         <div class="dx-field-value">
             <dx-range-selector [value]="[minDate, maxDate]" (onValueChanged)="onDateChanged($event)">
                 <dxo-margin [top]="0"></dxo-margin>
