--- a/viewer/src/app/pages/display-data3/display-data.component.html
+++ b/viewer/src/app/pages/display-data3/display-data.component.html
@@ -1,4 +1,4 @@
-<h2 class="content-block">Commits Data</h2>
+<h2 class="content-block">Percentage</h2>
 
 <dx-slider [min]="0" [max]="150" [value]="0" (onValueChanged)="slideChanged($event)">
     <dxo-tooltip [enabled]="true"></dxo-tooltip>
