--- a/viewer/src/app/pages/display-data/display-data.component.html
+++ b/viewer/src/app/pages/display-data/display-data.component.html
@@ -1,6 +1,6 @@
 <div class="dx-fieldset">
     <div class="dx-field custom-height-slider">
-        <div class="dx-field-label">Commits count</div>
+        <div class="dx-field-label">Commits threshold</div>
         <div class="dx-field-value">
             <dx-slider [min]="0" [max]="150" [(value)]="sliderValue" (onValueChanged)="updateFilter()">
                 <dxo-tooltip [enabled]="false"></dxo-tooltip>
