--- a/viewer/src/app/pages/display-data3/display-data.component.html
+++ b/viewer/src/app/pages/display-data3/display-data.component.html
@@ -1,6 +1,6 @@
 <h2 class="content-block">Commits Data</h2>
 
-<dx-slider [min]="0" [max]="150" [value]="0" (onValueChanged)="slideChanged($event)">
+<dx-slider [min]="0" [max]="150" [(value)]="sliderValue" (onValueChanged)="slideChanged($event)">
     <dxo-tooltip [enabled]="true"></dxo-tooltip>
 </dx-slider>
 
@@ -9,7 +9,7 @@
         <dxo-common-series-settings type="bar"></dxo-common-series-settings>
         <dxo-size [height]="200"></dxo-size>
         <dxo-adaptive-layout [width]="450"></dxo-adaptive-layout>
-        <dxo-tooltip [enabled]="true" format="currency" [customizeTooltip]="customizeTooltip"></dxo-tooltip>
+        <dxo-tooltip [enabled]="true" [customizeTooltip]="customizeTooltip"></dxo-tooltip>
     </dx-chart>
     
 <dx-pivot-grid [allowSortingBySummary]="true" [allowSorting]="true" [allowFiltering]="true" [allowExpandAll]="true"
